			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2753 2005/04/19 06:55:22 suz Exp $

<200504>
2005-04-19  SUZUKI, Shinsuke <suz@kame.net>
	* *bsd/sys/netinet/igmp.c, igmp_var.h, in.[ch], ip_output.c,
	  kame/sys/netient/in_msf.c: 
	  IGMPv3 treats 224.0.0.x(x!=1) as a normal IPv4 multicast address,
	  as specified in RFC3766.

	* openbsd/sys/netinet/in.c, in_var.h, ip_output.c,
	* netbsd/sys/netinet/igmp.c, igmp_var.h, in.c, in_pcb.c, in_var.h,
	  ip_output.c: reflect the following MLDv2 changes into the 
	  NetBSD/OpenBSD's IGMPv3 implementation.
	- fixs a kernel crash by an IGMPv3 Query (2005-01-01)
	- retransmits IGMPv3 report RobustnessVariable times (2004-12-31)
	- corrects an IGMP-query handling when MaxResponseCode=0 (2004-12-27)
	- introduces a sysctl option to force IGMP version (2004-07-09)
	- renames IGMPv3-ready in_multi{} manipulation functions (2004-02-05)

	* freebsd5/sys/netinet/igmp.c: fixed a kernel crash by an IGMP packet
	(a bug introduced in the change at 2005-04-14)

2005-04-18  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/netinet/igmp.c, in.c, ip_output.c,
	  kame/sys/netinet/in_msf.c: fixed the byte order of an IPv4 address 
	  for IN_XXX macros (freebsd-only)

2005-04-14  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet/in_msf.c freebsd5/contrib/pf/net/if_pfsync.c,
	  freebsd5/sys/netinet/igmp.c, igmp_var.h, in.c, in_pcb.c, in_var.h,
	  ip_output.c: reflect the following MLDv2 changes into the FreeBSD5's
	  IGMPv3 implementation.
	- fixs a kernel crash by an IGMPv3 Query (2005-01-01)
	- retransmits IGMPv3 report RobustnessVariable times (2004-12-31)
	- corrects an IGMP-query handling when MaxResponseCode=0 (2004-12-27)
	- introduces a sysctl option to force IGMP version (2004-07-09)
	- renames IGMPv3-ready in_multi{} manipulation functions (2004-02-05)

	* freebsd5/sys/netinet/ip_output.c: specifies spl()s as done in 
	  original FreeBSD5

	* kame/*: remove freebsd[234]-specific code, since they are no longer
	  supported in KAME-SNAP
