@@ -1530,6 +1530,12 @@ again:
 	TAILQ_FOREACH(ifp, &ifnet, if_link) {
 		int addrs;
 
+		/*
+		 * Zero the ifr_name buffer to make sure we don't
+		 * disclose the contents of the stack.
+		 */
+		memset(ifr.ifr_name, 0, sizeof(ifr.ifr_name));
+
 		if (strlcpy(ifr.ifr_name, ifp->if_xname, sizeof(ifr.ifr_name))
 		    >= sizeof(ifr.ifr_name))
 			return (ENAMETOOLONG);
